kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elastic-system
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.17.3  # Elasticsearch versiyonuna uygun olmalı
          ports:
            - containerPort: 5601
          readinessProbe:
            httpGet:
              path: /app/kibana
              port: 5601
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
